force-app/main/default/objects/Camp_Daily_Report__c/Camp_Daily_Report__c.object-meta.xml
<CustomObject>
    <label>Camp Daily Report</label>
    <nameField>
        <label>CDR #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Camp Daily Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>