force-app/main/default/objects/Camp_Daily_Report__c/fields/Afternoon_Tea_Extra__c.field-meta.xml
<CustomField>
    <fullName>Afternoon_Tea_Extra__c</fullName>
    <label>Afternoon Tea (Extra)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>