force-app/main/default/objects/Camp_Daily_Report__c/fields/Afternoon_Tea_Total__c.field-meta.xml
<CustomField>
    <fullName>Afternoon_Tea_Total__c</fullName>
    <label>Afternoon Tea Total</label>
    <length>5</length>
    <type>Text</type>
</CustomField>