force-app/main/default/objects/Camp_Daily_Report__c/fields/Bed_Total__c.field-meta.xml
<CustomField>
    <fullName>Bed_Total__c</fullName>
    <label>Bed Total</label>
    <length>5</length>
    <type>Text</type>
</CustomField>