force-app/main/default/objects/Camp_Daily_Report__c/fields/Beds_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Beds_Day_Rate__c</fullName>
    <inlineHelpText>This indicates the maximum number of beds, included in the Camp Day Rate.  Beds or Meals for anyone over this number must be included as an Extra Meal/Bed and an extra charge applies</inlineHelpText>
    <label>Beds/Day Rate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>