force-app/main/default/objects/Camp_Daily_Report__c/fields/Beds_Extra__c.field-meta.xml
<CustomField>
    <fullName>Beds_Extra__c</fullName>
    <label>Beds (Extra)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>