force-app/main/default/objects/Camp_Daily_Report__c/fields/Breakfast_Extra__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Extra__c</fullName>
    <label>Breakfast (Extra)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>