force-app/main/default/objects/Camp_Daily_Report__c/fields/Breakfast_Total__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Total__c</fullName>
    <label>Breakfast Total</label>
    <length>5</length>
    <type>Text</type>
</CustomField>