force-app/main/default/objects/Camp_Daily_Report__c/fields/Camp_Services__c.field-meta.xml
<CustomField>
    <fullName>Camp_Services__c</fullName>
    <label>Camp Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Waste Removal (Bin)</fullName>
            </value>
            <value>
                <fullName>Waste Removal (Septic/Grey Water)</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>