force-app/main/default/objects/Camp_Daily_Report__c/fields/Camp_Type__c.field-meta.xml
<CustomField>
    <fullName>Camp_Type__c</fullName>
    <label>Camp Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12hr Camp</fullName>
            </value>
            <value>
                <fullName>24hr Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>