force-app/main/default/objects/Camp_Daily_Report__c/fields/Charge_Item__c.field-meta.xml
<CustomField>
    <fullName>Charge_Item__c</fullName>
    <label>Charge Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Standby (WC)</fullName>
            </value>
            <value>
                <fullName>Standby (WOC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>