force-app/main/default/objects/Camp_Daily_Report__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Remote_Camp_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>