force-app/main/default/objects/Camp_Daily_Report__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <label>Client Contact</label>
    <type>TextArea</type>
</CustomField>