force-app/main/default/objects/Camp_Daily_Report__c/fields/Client_Representative__c.field-meta.xml
<CustomField>
    <fullName>Client_Representative__c</fullName>
    <label>Client Representative</label>
    <type>TextArea</type>
</CustomField>