force-app/main/default/objects/Camp_Daily_Report__c/fields/Coolant_Check_2__c.field-meta.xml
<CustomField>
    <fullName>Coolant_Check_2__c</fullName>
    <inlineHelpText>Details for Generator 2</inlineHelpText>
    <label>Coolant Check (2)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Satisfactory Level</fullName>
            </value>
            <value>
                <fullName>Coolant Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>