force-app/main/default/objects/Camp_Daily_Report__c/fields/Coolant_Check__c.field-meta.xml
<CustomField>
    <fullName>Coolant_Check__c</fullName>
    <label>Coolant Check (1)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Satisfactory Level</fullName>
            </value>
            <value>
                <fullName>Coolant Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>