force-app/main/default/objects/Camp_Daily_Report__c/fields/Crew_Change_Details__c.field-meta.xml
<CustomField>
    <fullName>Crew_Change_Details__c</fullName>
    <inlineHelpText>Provide details of Crew in and Crew out, time of arrival to site etc....</inlineHelpText>
    <label>Crew Change Details</label>
    <type>TextArea</type>
</CustomField>