force-app/main/default/objects/Camp_Daily_Report__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Date that Record is relevant to - should be daily therefore, todays date</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>