force-app/main/default/objects/Camp_Daily_Report__c/fields/Day_Attendant__c.field-meta.xml
<CustomField>
    <fullName>Day_Attendant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day Attendant</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Camp Daily Reports (Campy (1))</relationshipLabel>
    <relationshipName>Camp_Daily_Reports2</relationshipName>
    <type>Lookup</type>
</CustomField>