force-app/main/default/objects/Camp_Daily_Report__c/fields/Day_Cook__c.field-meta.xml
<CustomField>
    <fullName>Day_Cook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day Cook</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Camp Daily Reports (Camp Cook (1))</relationshipLabel>
    <relationshipName>Camp_Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>