force-app/main/default/objects/Camp_Daily_Report__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>