force-app/main/default/objects/Camp_Daily_Report__c/fields/Diesel__c.field-meta.xml
<CustomField>
    <fullName>Diesel__c</fullName>
    <label>Diesel (Litres on hand)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>