force-app/main/default/objects/Camp_Daily_Report__c/fields/Dinner_Extra__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Extra__c</fullName>
    <label>Dinner (Extra)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>