force-app/main/default/objects/Camp_Daily_Report__c/fields/Dinner_Total__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Total__c</fullName>
    <label>Dinner Total</label>
    <length>5</length>
    <type>Text</type>
</CustomField>