force-app/main/default/objects/Camp_Daily_Report__c/fields/Engine_Temperature_1__c.field-meta.xml
<CustomField>
    <fullName>Engine_Temperature_1__c</fullName>
    <label>Engine Temperature (1)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>