force-app/main/default/objects/Camp_Daily_Report__c/fields/Extra_Beds__c.field-meta.xml
<CustomField>
    <fullName>Extra_Beds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Beds</label>
    <type>Checkbox</type>
</CustomField>