force-app/main/default/objects/Camp_Daily_Report__c/fields/Extra_Meals__c.field-meta.xml
<CustomField>
    <fullName>Extra_Meals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Meals</label>
    <type>Checkbox</type>
</CustomField>