force-app/main/default/objects/Camp_Daily_Report__c/fields/Generator_1__c.field-meta.xml
<CustomField>
    <fullName>Generator_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Generator (1)</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>Remote_Camp_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>