force-app/main/default/objects/Camp_Daily_Report__c/fields/Generator_2__c.field-meta.xml
<CustomField>
    <fullName>Generator_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If there are two generators on site this data will be required.  Look up the asset Name</inlineHelpText>
    <label>Generator (2)</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Camp Daily Reports (Generator (2))</relationshipLabel>
    <relationshipName>Remote_Camp_Job_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>