force-app/main/default/objects/Camp_Daily_Report__c/fields/Hazards_Raised__c.field-meta.xml
<CustomField>
    <fullName>Hazards_Raised__c</fullName>
    <inlineHelpText>This is the number of hazard cards completed in a day</inlineHelpText>
    <label>Hazards Raised</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>