force-app/main/default/objects/Camp_Daily_Report__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order #</label>
    <referenceTo>Job_Orders__c</referenceTo>
    <relationshipLabel>Camp Daily Reports</relationshipLabel>
    <relationshipName>Camp_Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>