force-app/main/default/objects/Camp_Daily_Report__c/fields/Lunch_Extra__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Extra__c</fullName>
    <label>Lunch (Extra)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>