force-app/main/default/objects/Camp_Daily_Report__c/fields/Lunch_Total__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Total__c</fullName>
    <label>Lunch Total</label>
    <length>5</length>
    <type>Text</type>
</CustomField>