force-app/main/default/objects/Camp_Daily_Report__c/fields/Morning_Tea_Total__c.field-meta.xml
<CustomField>
    <fullName>Morning_Tea_Total__c</fullName>
    <label>Morning Tea Total</label>
    <length>5</length>
    <type>Text</type>
</CustomField>