force-app/main/default/objects/Camp_Daily_Report__c/fields/Night_Attendant__c.field-meta.xml
<CustomField>
    <fullName>Night_Attendant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Night Attendant</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Camp Daily Reports (Campy (2))</relationshipLabel>
    <relationshipName>Camp_Daily_Reports3</relationshipName>
    <type>Lookup</type>
</CustomField>