force-app/main/default/objects/Camp_Daily_Report__c/fields/Night_Attendant_Hours__c.field-meta.xml
<CustomField>
    <fullName>Night_Attendant_Hours__c</fullName>
    <label>Night Attendant Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>