force-app/main/default/objects/Camp_Daily_Report__c/fields/Night_Cook__c.field-meta.xml
<CustomField>
    <fullName>Night_Cook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Night Cook</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Camp Daily Reports (Camp Cook (2))</relationshipLabel>
    <relationshipName>Camp_Daily_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>