force-app/main/default/objects/Camp_Daily_Report__c/fields/Oil_Check__c.field-meta.xml
<CustomField>
    <fullName>Oil_Check__c</fullName>
    <label>Oil Check (1)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Satisfactory Level</fullName>
            </value>
            <value>
                <fullName>Oil Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>