force-app/main/default/objects/Camp_Daily_Report__c/fields/Potable_Water__c.field-meta.xml
<CustomField>
    <fullName>Potable_Water__c</fullName>
    <label>Potable Water (Litres on hand)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>