force-app/main/default/objects/Camp_Daily_Report__c/fields/Rubbish_Bins__c.field-meta.xml
<CustomField>
    <fullName>Rubbish_Bins__c</fullName>
    <label>Rubbish Bins (% Full)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>