force-app/main/default/objects/Camp_Daily_Report__c/fields/Septic__c.field-meta.xml
<CustomField>
    <fullName>Septic__c</fullName>
    <inlineHelpText>Number of litres currently in septic tank</inlineHelpText>
    <label>Septic (Litres in Tank)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>