force-app/main/default/objects/Camp_Daily_Report__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter name of Camp Site (It has to be created as a site first.)</inlineHelpText>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>Remote_Camp_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>