force-app/main/default/objects/Camp_Daily_Report__c/fields/Type_of_Emergency_Drill__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Emergency_Drill__c</fullName>
    <label>Type of Emergency Drill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fire Drill</fullName>
            </value>
            <value>
                <fullName>Person Down Drill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>