force-app/main/default/objects/Camp_Daily_Report__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Remote_Camp_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>