force-app/main/default/objects/Camp_Daily_Report__c/fields/WD_Order__c.field-meta.xml
<CustomField>
    <fullName>WD_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Order #</label>
    <referenceTo>WD_Order__c</referenceTo>
    <relationshipName>Remote_Camp_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>