force-app/main/default/objects/Camp_Daily_Report__c/fields/WD_Representative__c.field-meta.xml
<CustomField>
    <fullName>WD_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Representative</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Remote_Camp_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>