force-app/main/default/objects/Camp_Daily_Report__c/recordTypes/X12_Hour_Camp.recordType-meta.xml
<RecordType>
    <fullName>X12_Hour_Camp</fullName>
    <active>true</active>
    <label>12 Hour Camp</label>
</RecordType>