force-app/main/default/objects/Camp_Daily_Report__c/recordTypes/X24_Hour_Camp.recordType-meta.xml
<RecordType>
    <fullName>X24_Hour_Camp</fullName>
    <active>true</active>
    <label>24 Hour Camp</label>
</RecordType>